--- a/queue.yaml
+++ b/queue.yaml
@@ -1,16 +1,17 @@
 
 queue:
+- name: default
+  rate: 10/s
 - name: crm
-
-queue:
+  rate: 10/s
+  retry_parameters:
+    task_retry_limit: 7
+    task_age_limit: 2d
 - name: integration
-
-queue:
+  rate: 10/s
 - name: campaigns
-
-queue:
+  rate: 10/s
 - name: reports
-
-queue:
+  rate: 10/s
 - name: messaging
 
